# home-navigation

./: .gitignore  .gitmodules  DOCUMENTATION.md  Makefile  README.md  map.pgm
Docker/: Dockerfile.l4t
docker/: Dockerfile.nav  Dockerfile.nav.mediapipe  Dockerfile.nav.xavier
docker/scripts/: run.bash
nav_main/launch/include/imu/: amcl_wo_map_topic.launch.xml
nav_main/scripts/: receive_person_pos.py
ws/: map.pgm
ws/log/: latest_build  latest_list
ws/src/actions/: CMakeLists.txt  package.xml
ws/src/actions/action/: moveAction.action  navServ.action
ws/src/actions/launch/: move_actions.launch  multimaster.launch  nav_actions.launch
ws/src/actions/scripts/: goalCreator.py  goalCreatorClient.py  moveClient.py  moveServer.py  navClient.py  navServer.py  roomGetterClient.py  roomGetterServer.py
ws/src/actions/srv/: CreateGoal.srv
ws/src/dashgo_description/: CMakeLists.txt  package.xml
ws/src/dashgo_driver/: CMakeLists.txt  package.xml
ws/src/dashgo_driver/config/: dashgo_parameters.yaml
ws/src/dashgo_driver/launch/: dashgo_driver_launch.py  efk_test.py
ws/src/dashgo_driver/scripts/: dashgo_driver.py
ws/src/dashgob1_noetic/log/: latest_list
ws/src/frida_description/: CMakeLists.txt  package.xml
ws/src/frida_description/config/: joint_names_General Assembly.SLDASM.yaml
ws/src/frida_description/launch/: display.launch.py
ws/src/map_contextualizer/: areas.json
ws/src/my_package/: package.xml  setup.py
ws/src/nav_main/: CMakeLists.txt  package.xml
ws/src/yocs_velocity_smoother/: CMakeLists.txt  README.md  package.xml
(+117 files in other folders)
